--- a/styles/style.css
+++ b/styles/style.css
@@ -7,3 +7,14 @@
     background-color: #1F2937;
     padding: 0 200px 200px 200px;
 }
+
+/* .header {
+    display: flex;
+} */
+
+.logo {
+    width: 50px;
+    height: auto;
+    border: 5px solid #f03907b8;
+    border-radius: 50%;
+}
