--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,14 @@
 
 .chunk1 {
     background-color: #1F2937;
-    padding: 0 200px 200px 200px;
+    padding: 0 300px 300px 300px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
+    padding: 10px 0;
+    align-items: center;
 }
 
 ul {
@@ -19,18 +21,19 @@ ul {
     display: flex;
     font-size: 18px;
     color: #E5E7EB;
+    gap: 25px;
 }
 
 .logo.image {
     width: 50px;
     height: auto;
-    border: 5px solid #359371b8;
+    border: 5px solid #3b5149b8;
     border-radius: 50%;
 }
 
 .main.image {
     width: 500px;
     height: auto;
-    border: 5px solid #359371b8;
+    border: 5px solid #3b5149b8;
     border-radius: 10px;
 }
