--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@ a {
 
 .chunk2 {
     text-align: center;
-    padding: 45px 300px 300px 300px;
+    padding: 45px 300px 300px 150px;
 }
 
 .title.ofbirds {
@@ -96,4 +96,23 @@ a {
 .bird.image {
     width: 200px;
     height: 200px;
+    border: 5px solid #3882F6;
+    border-radius: 10px;;
+}
+
+.birds {
+    display: flex;
+    gap: 70px;
+    justify-content: center;
+}
+
+.bird.info {
+    font-size: 18px;
+    color:#1F2937;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
