--- a/styles/style.css
+++ b/styles/style.css
@@ -128,3 +128,11 @@ a {
     color: #1F2937;
     text-align: center;
 }
+
+.quoter {
+    font-size: 24px;
+    color:#1F2937;
+    font-weight: 900;
+    width: 400px;
+    margin-left: auto;
+}
